--- a/nginx/index.html
+++ b/nginx/index.html
@@ -5,7 +5,7 @@
     <title>Дипломная работа Netology v1</title>
 </head>
 <body>
-    <h1>Дипломная работа Netology</h1>
+    <h1>Дипломная работа Netology v3.1 </h1>
     <img src="image.png" alt="Изображение для дипломной работы" style="max-width: 100%; height: auto;">
 </body>
 </html>
